--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -35,6 +35,7 @@
   @import '../gui/formly/sjukskrivningar';
   @import 'komplettering-dialog';
   @import '../gui/wcIntegrationEnhetSelector/wcIntegrationEnhetSelector.directive';
+  @import '../gui/wcIntygReplacedMessage.directive';
 
   //colors
   $color_java_approx: #28b4c4;
