--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_wc-header.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_wc-header.scss
@@ -167,3 +167,21 @@ $url-avatar: url('/img/avatar.png');
   border-color: $stat-circle-active-border-color;
   color: $stat-circle-active-color;
 }
+
+.glyph-background {
+  	position:relative;
+  	border-radius:50%;
+    color:#f00;
+    z-index:2;
+}
+  
+.inner {
+    position:absolute;
+    top:2px;
+    left:2px;
+    right:2px;
+    bottom:2px;
+    border-radius:50%;
+    background-color:#fff;
+    z-index:-1;
+}
