INTYG-3617: Tillåt markera som hanterad för frågor som inkommit från fk efter att intyget makulerats (pga det gamla fk7263 frågasvarkontraktet tillåter det)

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/_arende.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/_arende.scss
@@ -150,3 +150,7 @@ arende list item animation
 .arende-meddelande, .arende-komplettera {
   padding-top: 10px;
 }
+
+.arende-hantera-toggle {
+  color: $arende-block-head-color;
+}
