INTYG-3654: ändrat färger på Skapa intygsknappen

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -961,3 +961,12 @@ wc cookie banner css.
 .makulera-choices .big-radio-label {
   margin-top: 10px;
 }
+
+
+.continue-btn:disabled{
+  background-color:#F0F0F0 ;
+}
+
+.continue-btn:disabled:disabled{
+  background-color:#F0F0F0 ;
+}
