INTYG-3518: Minskade maxbredd på postadressfält.

--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form18.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form18.html
@@ -19,7 +19,7 @@
           <span message key="ts-bas.form.postadress"></span> <span class="required">*</span>
         </label>
         <div class="col-md-10">
-          <input type="text" class="form-control input-full" id="clinicInfoPostalAddress"
+          <input type="text" class="form-control input-50" id="clinicInfoPostalAddress"
                  name="clinicInfo.postalAddress" ng-model="viewState.intygModel.grundData.skapadAv.vardenhet.postadress"
                  maxlength="70" ng-blur="validate()">
         </div>
