--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form7.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form7.html
@@ -18,7 +18,7 @@
       <div class="row">
         <label class="col-md-2 control-label">Postadress <span class="required">*</span></label>
         <div class="col-md-10">
-          <input type="text" class="form-control input-full" id="clinicInfoPostalAddress"
+          <input type="text" class="form-control input-50" id="clinicInfoPostalAddress"
                  name="clinicInfo.postalAddress" ng-model="viewState.intygModel.grundData.skapadAv.vardenhet.postadress"
                  maxlength="70" ng-blur="validate()">
         </div>
