--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -336,6 +336,14 @@
     max-width: 5em;
   }
 
+  .input-30 {
+    max-width: 30em;
+  }
+
+  .input-50 {
+    max-width: 50em;
+  }
+
   /* Used for datepicker */
   [datepicker] thead tr th {
     padding-bottom: 10px;
