--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form15.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form15.html
@@ -20,7 +20,7 @@
             <div class="form-group">
                   <label class="col-md-3 control-label label__no-break">Postadress <span class="required">*</span></label>
                   <div class="col-md-9">
-                      <input type="text" class="form-control input-full" id="clinicInfoPostalAddress"
+                      <input type="text" class="form-control input-50" id="clinicInfoPostalAddress"
                              name="clinicInfo.postalAddress"
                              ng-model="model.grundData.skapadAv.vardenhet.postadress"
                              ng-blur="validate()">
