--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/patient.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/patient.html
@@ -6,7 +6,7 @@
         <div class="row">
           <label class="col-md-2 control-label"><span message key="ts-bas.form.postadress"></span> <span class="required">*</span></label>
           <div class="col-md-10">
-            <input type="text" class="form-control input-full" id="patientPostadress"
+            <input type="text" class="form-control input-30" id="patientPostadress"
                    name="viewState.intygModel.grundData.patient.postadress"
                    ng-model="viewState.intygModel.grundData.patient.postadress" maxlength="50" wc-focus-on="focusFirstInput"
                    ng-blur="validate()"
