--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form13.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form13.html
@@ -16,7 +16,7 @@
                  ng-model="viewState.intygModel.utvecklingsstorning.psykiskUtvecklingsstorning" ng-change="validate()"></td>
       <td><span dynamic-label key="FRG_28.RBK"></span> <span class="required">*</span></td>
     </tr>
-    <tr><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('harSyndrom')"></wc-field-validation></td></tr>
+    <tr><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('psykiskUtvecklingsstorning')"></wc-field-validation></td></tr>
     <tr>
       <td><input name="utvecklingsstorningb" type="radio" ng-value="true"
                  ng-model="viewState.intygModel.utvecklingsstorning.harSyndrom" ng-change="validate()"></td>
@@ -24,6 +24,6 @@
                  ng-model="viewState.intygModel.utvecklingsstorning.harSyndrom" ng-change="validate()"></td>
       <td><span dynamic-label key="FRG_29.RBK"></span> <span class="required">*</span></td>
     </tr>
-    <tr ng-show="viewState.getValidationErrors('psykiskUtvecklingsstorning')" class="last-validation"><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('psykiskUtvecklingsstorning')"></wc-field-validation></td></tr>
+    <tr ng-show="viewState.getValidationErrors('harSyndrom')" class="last-validation"><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('harSyndrom')"></wc-field-validation></td></tr>
   </table>
 </div>
