--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -989,3 +989,24 @@ wc cookie banner css.
 .z-low {
   z-index: 100;
 }
+
+.bankid-signera-modal {
+      .modal {
+        text-align: center;
+      }
+
+      .modal-dialog {
+        width: 98%;
+        height: 92%;
+        padding: 0;
+      }
+
+      .modal-content {
+        height: 99%;
+      }
+
+      .modal-body {
+        top:40%;
+        text-align:center;
+      }
+}
