--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/patient.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/patient.html
@@ -53,7 +53,7 @@
     <div class="row">
       <label class="col-md-2 control-label"></label>
       <div class="col-md-10">
-        <wc-utkast-patient-address-updater patient-model="viewState.intygModel.grundData.patient" form="certForm"></wc-utkast-patient-address-updater>
+        <wc-utkast-patient-address-updater patient-model="viewState.intygModel.grundData.patient" form="certForm" validation-fn="validate"></wc-utkast-patient-address-updater>
       </div>
     </div>
   </div>
