INTYG-3765: Frontend för utkast till ärenden / fråga & svar

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -1010,3 +1010,15 @@ wc cookie banner css.
         text-align:center;
       }
 }
+
+.span-success {
+    color: #42a341;
+}
+
+.span-error {
+    color: red;
+}
+
+.push-right {
+    float: right;
+}
