INTYG-3875: Fixade valideringsfel för Vårdenhet på samma vis som för ts-bas

--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form7.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form7.html
@@ -14,7 +14,7 @@
   </div>
 
   <div class="form-horizontal form-group">
-    <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('vardenhet.postadress')">
+    <wc-validation-wrapper label-col-size="2" field-type="single-text" validations="viewState.getValidationErrors('grunddata.skapadav.vardenhet.postadress')">
       <div class="row">
         <label class="col-md-2 control-label">Postadress <span class="required">*</span></label>
         <div class="col-md-10">
@@ -27,7 +27,7 @@
   </div>
 
   <div class="form-horizontal form-group">
-    <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('vardenhet.postnummer')">
+    <wc-validation-wrapper label-col-size="2" field-type="single-text" validations="viewState.getValidationErrors('grunddata.skapadav.vardenhet.postnummer')">
       <div class="row">
         <label class="col-md-2 control-label">Postnummer <span class="required">*</span></label>
         <div class="col-md-10">
@@ -40,7 +40,7 @@
   </div>
 
   <div class="form-horizontal form-group">
-    <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('vardenhet.postort')">
+    <wc-validation-wrapper label-col-size="2" field-type="single-text" validations="viewState.getValidationErrors('grunddata.skapadav.vardenhet.postort')">
       <div class="row">
         <label class="col-md-2 control-label">Postort <span class="required">*</span></label>
         <div class="col-md-10">
@@ -53,7 +53,7 @@
   </div>
 
   <div class="form-horizontal form-group">
-    <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('vardenhet.telefonnummer')">
+    <wc-validation-wrapper label-col-size="2" field-type="single-text" validations="viewState.getValidationErrors('grunddata.skapadav.vardenhet.telefonnummer')">
       <div class="row">
         <label class="col-md-2 control-label">Telefonnummer <span class="required">*</span></label>
         <div class="col-md-10">
