--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/minaintyg/views/view-cert.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/minaintyg/views/view-cert.html
@@ -19,7 +19,7 @@
 
 -->
 <mi-page-head>
-
+  <mi-breadcrumb></mi-breadcrumb>
   <!-- Content -->
   <div class="row">
     <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 mi-text">
