--- a/fk/luse/src/main/resources/META-INF/resources/webjars/luse/minaintyg/views/view-cert.html
+++ b/fk/luse/src/main/resources/META-INF/resources/webjars/luse/minaintyg/views/view-cert.html
@@ -1,40 +1,38 @@
-<mi-page-head></mi-page-head>
+<mi-page-head>
+  <mi-breadcrumb></mi-breadcrumb>
+  <!-- Content -->
+  <div class="row">
+    <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7">
+      <h1 ng-focus="pagefocus" tabindex="-1">
+        <span id="viewCertificateHeader" message key="luse.label.pagetitle"></span>
+      </h1>
+      <p>
+      <div class="mi-text" message key="luse.label.pageingress"></div>
+
+      <div uib-collapse="!isCollapsed1" class="collapse mi-text">
+        <div message key="luse.label.pagedescription.sendcertificate.header"></div>
+        <div message key="luse.label.pagedescription.sendcertificate"></div>
+        <div message key="luse.label.pagedescription.error.in.certificate.header"></div>
+        <div message key="luse.label.pagedescription.error.in.certificate"></div>
+        <div message key="luse.label.pagedescription.archive.header"></div>
+        <div message key="luse.label.pagedescription.archive"></div>
+      </div>
+      </p>
+      <button type="button" ng-click="isCollapsed1 = !isCollapsed1" class="btn-link btn-link-link margin-top-5px"
+              data-toggle="collapse">
+        <span message key="luse.label.status.{{!isCollapsed1}}"></span>
+      </button>
+    </div>
+    <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+      <latest-events cert-id="{{cert.id}}" statuses="cert.filteredStatuses"></latest-events>
+    </div>
+  </div>
+</mi-page-head>
 <div class="container">
   <div class="row-fluid">
-    <div id="backnav" class="row-fluid">
-      <a class="backlink" href="/web/start/#/"> <span message key="luse.button.goback"></span>
-      </a>
-    </div>
 
     <div mi-spinner label="luse.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
 
-      <!-- Content -->
-      <div class="row">
-        <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7">
-          <h1 ng-focus="pagefocus" tabindex="-1">
-            <span id="viewCertificateHeader" message key="luse.label.pagetitle"></span>
-          </h1>
-          <p>
-          <div class="mi-text" message key="luse.label.pageingress"></div>
-
-          <div uib-collapse="!isCollapsed1" class="collapse mi-text">
-            <div message key="luse.label.pagedescription.sendcertificate.header"></div>
-            <div message key="luse.label.pagedescription.sendcertificate"></div>
-            <div message key="luse.label.pagedescription.error.in.certificate.header"></div>
-            <div message key="luse.label.pagedescription.error.in.certificate"></div>
-            <div message key="luse.label.pagedescription.archive.header"></div>
-            <div message key="luse.label.pagedescription.archive"></div>
-          </div>
-          </p>
-          <button type="button" ng-click="isCollapsed1 = !isCollapsed1" class="btn-link btn-link-link margin-top-5px"
-                  data-toggle="collapse">
-            <span message key="luse.label.status.{{!isCollapsed1}}"></span>
-          </button>
-        </div>
-        <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
-          <latest-events cert-id="{{cert.id}}" statuses="cert.filteredStatuses"></latest-events>
-        </div>
-      </div>
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <form id="view-as-pdf" action="{{downloadAsPdfLink}}" name="pdfForm" method="get" target="_blank">
