--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
@@ -18,7 +18,42 @@
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 -->
-<mi-page-head></mi-page-head>
+<mi-page-head>
+  <mi-breadcrumb></mi-breadcrumb>
+  <!-- Content -->
+  <div class="row">
+    <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 mi-text">
+      <h1>
+        <message id="viewCertificateHeader" key="ts-bas.label.pagetitle" />
+      </h1>
+      <p></p>
+      <div class="mi-text" message key="ts-bas.label.pageingress"></div>
+      <div uib-collapse="!isCollapsed1" class="collapse mi-text">
+        <div message key="ts-bas.label.pagedescription.sendcertificate.header"></div>
+        <div message key="ts-bas.label.pagedescription.sendcertificate"></div>
+        <div message key="ts-bas.label.pagedescription.save.or.print.certificate.header"></div>
+        <div message key="ts-bas.label.pagedescription.save.or.print.certificate"></div>
+        <a class="glyphicon glyphicon-question-sign more-info" ng-click="isCollapsedPDF = !isCollapsedPDF"
+           title="{{messageService.getProperty('common.title.helptext.moreinfo')}}"></a>
+        <div uib-collapse="!isCollapsedPDF" class="well well-sm margin-top-5px"><span message
+                                                                                      key="ts-bas.helptext.readpdfhelp"></span>
+        </div>
+        <div message key="ts-bas.label.pagedescription.error.in.certificate.header"></div>
+        <div message key="ts-bas.label.pagedescription.error.in.certificate"></div>
+        <div message key="ts-bas.label.pagedescription.archive.header"></div>
+        <div message key="ts-bas.label.pagedescription.archive"></div>
+      </div>
+      <br>
+      <button type="button" ng-click="isCollapsed1 = !isCollapsed1" class="btn-link btn-link-link margin-top-5px"
+              data-toggle="collapse">
+        <span message key="ts-bas.label.status.{{!isCollapsed1}}"></span>
+      </button>
+    </div>
+    <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+      <latest-events cert-id="{{cert.id}}" statuses="cert.status"></latest-events>
+    </div>
+  </div>
+</mi-page-head>
 <div class="container">
   <div class="row-fluid">
 
@@ -33,46 +68,6 @@
     </div>
 
     <div ng-show="doneLoading">
-      <div id="backnav" class="row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <a class="backlink" href="/web/start/#/">
-          <message key="ts-bas.button.goback" />
-        </a>
-      </div>
-
-
-      <!-- Content -->
-      <div class="row">
-        <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 mi-text">
-          <h1>
-            <message id="viewCertificateHeader" key="ts-bas.label.pagetitle" />
-          </h1>
-          <p></p>
-          <div class="mi-text" message key="ts-bas.label.pageingress"></div>
-          <div uib-collapse="!isCollapsed1" class="collapse mi-text">
-            <div message key="ts-bas.label.pagedescription.sendcertificate.header"></div>
-            <div message key="ts-bas.label.pagedescription.sendcertificate"></div>
-            <div message key="ts-bas.label.pagedescription.save.or.print.certificate.header"></div>
-            <div message key="ts-bas.label.pagedescription.save.or.print.certificate"></div>
-            <a class="glyphicon glyphicon-question-sign more-info" ng-click="isCollapsedPDF = !isCollapsedPDF"
-               title="{{messageService.getProperty('common.title.helptext.moreinfo')}}"></a>
-            <div uib-collapse="!isCollapsedPDF" class="well well-sm margin-top-5px"><span message
-                                                                                          key="ts-bas.helptext.readpdfhelp"></span>
-            </div>
-            <div message key="ts-bas.label.pagedescription.error.in.certificate.header"></div>
-            <div message key="ts-bas.label.pagedescription.error.in.certificate"></div>
-            <div message key="ts-bas.label.pagedescription.archive.header"></div>
-            <div message key="ts-bas.label.pagedescription.archive"></div>
-          </div>
-          <br>
-          <button type="button" ng-click="isCollapsed1 = !isCollapsed1" class="btn-link btn-link-link margin-top-5px"
-                  data-toggle="collapse">
-            <span message key="ts-bas.label.status.{{!isCollapsed1}}"></span>
-          </button>
-        </div>
-        <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
-          <latest-events cert-id="{{cert.id}}" statuses="cert.status"></latest-events>
-        </div>
-      </div>
 
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
