INTYG-3664: Diverse för Webcert och dynamiska länkar

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form10.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form10.html
@@ -3,9 +3,7 @@
     <div wc-field field-label="fk7263.label.prognos" field-number="10" ng-hide="viewState.isArbetslos()"
          field-help-text="fk7263.helptext.arbetsformaga.prognos" id="prognosForm">
 
-        <a class="soclink" href="http://www.socialstyrelsen.se/riktlinjer/forsakringsmedicinsktbeslutsstod"
-           target="_blank" title="Öppnar Socialstyrelsens beslutstöd för angiven huvuddiagnos">Socialstyrelsens
-            försäkringsmedicinska beslutsstöd <img src="/img/link_icon.png"/></a>
+        <span dynamiclink key="fmbSocWithIcon" linkclass="soclink"></span>
 
         <div class="form-group">
             <label class="radio-inline">
