--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form9.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form9.html
@@ -1,9 +1,7 @@
 <div class="">
     <div wc-field field-label="fk7263.label.arbetsformaga.bedomning" field-number="9"
          field-help-text="fk7263.helptext.arbetsformaga.bedoms-langre">
-        <a class="soclink" href="http://www.socialstyrelsen.se/riktlinjer/forsakringsmedicinsktbeslutsstod"
-           target="_blank" title="Öppnar Socialstyrelsens beslutstöd för angiven huvuddiagnos">Socialstyrelsens
-            försäkringsmedicinska beslutsstöd</a> <img src="/img/link_icon.png"/>
+        <span dynamiclink key="fmbSoc" linkclass="soclink"></span> <img src="/img/link_icon.png"/>
                 <textarea id="capacityForWorkText" class="form-control" name="capacityForWork.text" rows="6" auto-expand
                           ng-model="model.arbetsformagaPrognos" wc-maxlength ng-trim="false"
                           maxlength="{{viewState.inputLimits.arbetsformagaPrognos}}"
