--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
@@ -26,4 +26,8 @@
 @import 'components/latestEventsModal/latestEventsModal.directive.scss';
 @import 'components/miCompactCertificateBody/miCompactCertificateBody.directive.scss';
 @import 'components/miCompactCertificateHeader/miCompactCertificateHeader.directive.scss';
+@import 'components/unified-view/components/uvDelFraga/uvDelFraga.directive.scss';
+@import 'components/unified-view/components/uvFraga/uvFraga.directive.scss';
+@import 'components/unified-view/components/uvKategori/uvKategori.directive.scss';
+@import 'components/unified-view/components/uvSimpleValue/uvSimpleValue.directive.scss';
 // endinjector
