INTYG-3834: Added certificate header to lisjp

--- a/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/view-cert.html
+++ b/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/view-cert.html
@@ -66,6 +66,8 @@
         </div>
       </div>
 
+      <mi-compact-certificate-header cert-meta-model="certMeta"></mi-compact-certificate-header>
+      <mi-compact-certificate-body cert-meta-model="certMeta"></mi-compact-certificate-body>
       <hr>
       <uv-render-components config="uvConfig" view-data="cert"></uv-render-components>
       <hr>
@@ -73,6 +75,7 @@
       <div id="certificate" class="certificate">
         <span class="hide" id="certId" title="{{cert.id}}"></span>
         <span class="hide" id="certType" title="{{cert.typ}}"></span>
+
 
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
