--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateBody/miCompactCertificateBody.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateBody/miCompactCertificateBody.directive.html
@@ -13,14 +13,14 @@
     </div>
 
     <div class="col-xs-12 col-sm-6 body-col text-right">
-      <button type="button" ng-attr-id="archiveCertificateBtn-{{certMetaModel.id}}" class="btn btn-secondary"
+      <button ng-if="onArchiveClick" type="button" ng-attr-id="archiveCertificateBtn-{{certMetaModel.id}}" class="btn btn-secondary"
               ng-click="onArchiveClick({cert:certMetaModel})"
               uib-popover="{{messageService.getProperty('button.archive.tooltip')}}" popover-trigger="mouseenter"
               popover-popup-delay="300" popover-append-to-body="true" popover-placement="auto top">
         <i class="icon icon-box"></i> <span message key="button.archive"></span>
       </button>
 
-      <button type="button" ng-attr-id="viewCertificateBtn-{{certMetaModel.id}}" class="btn btn-primary"
+      <button ng-if="onArchiveClick" type="button" ng-attr-id="viewCertificateBtn-{{certMetaModel.id}}" class="btn btn-primary"
               ng-click="onViewClick({cert:certMetaModel})"
               uib-popover="{{messageService.getProperty('button.show.tooltip')}}" popover-trigger="mouseenter"
               popover-popup-delay="300" popover-append-to-body="true" popover-placement="auto top">
