INTYG-3834: Alla enkla fall byggda lisjp.

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvTable/uvTable.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvTable/uvTable.directive.html
@@ -1,4 +1,4 @@
-<table id="{{config.modelProp}}">
+<table id="{{config.modelProp}}" class="table table-striped">
   <tr>
     <th ng-repeat="header in config.headers">
         <span dynamic-label key="{{header}}"></span>
