INTYG-3834: lagt till uv-skapad-av komponent samt uvUtil för att slå upp värden i modellen.

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
@@ -31,4 +31,5 @@
 @import 'components/unified-view/components/uvFraga/uvFraga.directive.scss';
 @import 'components/unified-view/components/uvKategori/uvKategori.directive.scss';
 @import 'components/unified-view/components/uvSimpleValue/uvSimpleValue.directive.scss';
+@import 'components/unified-view/components/uvSkapadAv/uvSkapadAv.directive.scss';
 // endinjector
