INTYG-3834: komponentkedjan rendereras nu först när viewData är tillgängligt, så att man slipper validera det i varje komponent.

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/uvRenderComponents.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/uvRenderComponents.directive.html
@@ -1,3 +1,5 @@
-<div ng-repeat="itemConfig in config">
-  <uv-dynamic-component config="itemConfig" view-data="viewData" />
+<div ng-if="viewData">
+  <div ng-repeat="itemConfig in config">
+    <uv-dynamic-component config="itemConfig" view-data="viewData" />
+  </div>
 </div>
