--- a/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/view-cert.html
+++ b/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/view-cert.html
@@ -69,7 +69,7 @@
       <hr>
       <mi-compact-certificate-header cert-meta-model="certMeta"></mi-compact-certificate-header>
       <mi-compact-certificate-body cert-meta-model="certMeta"></mi-compact-certificate-body>
-      <uv-render-components config="uvConfig" view-data="cert"></uv-render-components>
+      <uv-render-components config="uvConfig" view-data="viewData"></uv-render-components>
       <hr>
 
       <div id="certificate" class="certificate">
