INTYG-3834: Lagt till uv-tillaggsfragor komponent

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
@@ -32,4 +32,5 @@
 @import 'components/unified-view/components/uvKategori/uvKategori.directive.scss';
 @import 'components/unified-view/components/uvSimpleValue/uvSimpleValue.directive.scss';
 @import 'components/unified-view/components/uvSkapadAv/uvSkapadAv.directive.scss';
+@import 'components/unified-view/components/uvTillaggsfragor/uvTillaggsfragor.directive.scss';
 // endinjector
