INTYG-3834: Enhetstester för alla uv-komponenter.

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvDelFraga/uvDelFraga.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvDelFraga/uvDelFraga.directive.html
@@ -1,5 +1,5 @@
 <div class="uv-del-fraga-template">
-  <h3 ng-if="config.labelKey"><span dynamic-label key="{{ config.labelKey }}" /></h3>
+  <h3 ng-if="config.labelKey"><span dynamic-label key="{{ config.labelKey }}"></span></h3>
   <div class="body">
     <uv-render-components config="config.components" view-data="viewData" />
   </div>
