--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvList/uvList.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvList/uvList.directive.html
@@ -1,4 +1,4 @@
-<ul id="{{config.modelProp}}">
+<ul ng-attr-id="{{config.modelProp}}" class="uv-list-template">
   <li ng-repeat="values in getValue()">
     <span dynamic-label key="{{values}}"></span>
   </li>
