--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvSkapadAv/uvSkapadAv.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvSkapadAv/uvSkapadAv.directive.html
@@ -3,13 +3,13 @@
 
   <div class="row">
     <div class="col-xs-12 col-sm-3">
-      <div><strong>{{vm.fullstandigtNamn}}</strong></div>
-      <div>Tel: {{vm.vardenhet.telefonnummer}}</div>
+      <div id="uv-skapad-av--fullstandigtNamn"><strong>{{vm.fullstandigtNamn}}</strong></div>
+      <div id="uv-skapad-av--telefon">Tel: {{vm.vardenhet.telefonnummer}}</div>
     </div>
 
     <div class="col-xs-12 col-sm-9">
-      <div><strong>{{vm.vardenhet.enhetsnamn}}, {{vm.vardenhet.vardgivare.vardgivarnamn}}</strong></div>
-      <div>{{vm.vardenhet.postadress}}, {{vm.vardenhet.postnummer}} {{vm.vardenhet.postort}}</div>
+      <div id="uv-skapad-av--enhet"><strong>{{vm.vardenhet.enhetsnamn}}, {{vm.vardenhet.vardgivare.vardgivarnamn}}</strong></div>
+      <div id="uv-skapad-av--enhet-adress">{{vm.vardenhet.postadress}}, {{vm.vardenhet.postnummer}} {{vm.vardenhet.postort}}</div>
     </div>
 
   </div>
